--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Surprise untuk bf</title>
+  <title>For My Cutie MingMing</title>
 </head>
 <body>
-  <h1>Hi Sayang! 😘</h1>
-  <p>Ini coding aku khas untuk kau!</p>
+  <h1>Hi MingMing 😘</h1>
+  <p>this page is a special page for you</p>
 </body>
 </html>
