--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Just for You</title>
+  <title>For You</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #ffe3ec, #c1f0f6);
+      background: linear-gradient(135deg, #ffe0f0, #d0f0ff);
       color: #333;
       display: flex;
       justify-content: center;
@@ -34,7 +32,7 @@
     .active {
       display: block;
     }
-    h1, h2 {
+    h1, h2, p {
       margin: 15px 0;
     }
     button {
@@ -46,7 +44,6 @@
       border-radius: 8px;
       cursor: pointer;
       margin-top: 20px;
-      transition: background 0.3s;
     }
     button:hover {
       background: #ff85c1;
@@ -59,35 +56,58 @@
       border-radius: 8px;
       border: 1px solid #ccc;
     }
-    .emoji {
-      font-size: 2.5em;
+    img {
+      max-width: 100%;
+      border-radius: 15px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+
   <div class="container">
-    <!-- Slide 1: Intro -->
+
+    <!-- Slide 1 -->
     <div class="slide active" id="slide1">
-      <div class="emoji">💌</div>
-      <h1>Hi, I'm Seonghyun</h1>
-      <p>I made something for you, from my heart 💖</p>
+      <h1>Hi my name is seonghyun..</h1>
+      <p>Ivemade something just for you</p>
       <button onclick="nextSlide()">Next</button>
     </div>
 
-    <!-- Slide 2: Ask for name -->
+    <!-- Slide 2: Input name -->
     <div class="slide" id="slide2">
-      <h2>Whats your nickname?</h2>
-      <input type="text" placeholder="(Oops... it's disabled!)" disabled />
-      <p style="font-size: 0.9em; color: #777;">Looks like you can't type 👀</p>
+      <h2>What's your name? 😘</h2>
+      <input type="text" id="hisName" placeholder="Enter your name" />
+      <br>
+      <button onclick="showName()">Submit</button>
+    </div>
+
+    <!-- Slide 3: With image -->
+    <div class="slide" id="slide3">
+      <h2>Just imagine us together 💞</h2>
+      <img src="yourimage.jpg" alt="Our picture" />
       <button onclick="nextSlide()">Next</button>
     </div>
 
-    <!-- Slide 3: Surprise -->
-    <div class="slide" id="slide3">
-      <h2>You will be mine 💍</h2>
-      <h2>And I will be yours ❤️</h2>
-      <button onclick="alert('Forever and always, I love you 😘')">YES!</button>
+    <!-- Slide 4: Sweet paragraph -->
+    <div class="slide" id="slide4">
+      <h2> something about me...</h2>
+      <p>
+        nothing much about me but yea i promise i will be a guy that will always lean my shoulders for you <br>
+        either on your good days or bad days..i will love you no matter what:>>> and one more thing.. i love discovering new things and right now..<br>
+        I think the best thing I’ve discovered is you~~~
+      </p>
+      <button onclick="nextSlide()">Next</button>
     </div>
+
+    <!-- Slide 5: Proposal -->
+    <div class="slide" id="slide5">
+      <h2>Will you be my boyfriend? 💍</h2>
+      <img src="yourphoto.jpg" alt="Me smiling for you" />
+      <br>
+      <button onclick="alert('YAY! I love you ❤️')">YES!</button>
+    </div>
+
   </div>
 
   <script>
@@ -97,6 +117,17 @@
       current++;
       document.getElementById('slide' + current).classList.add('active');
     }
+
+    function showName() {
+      const name = document.getElementById('hisName').value;
+      if (name.trim() !== "") {
+        alert(`Ouuu seems like this name will be mine 😏`);
+        nextSlide();
+      } else {
+        alert("Please enter your name 😅");
+      }
+    }
   </script>
+
 </body>
 </html>
