--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Slide 1 -->
     <div class="slide active" id="slide1">
       <h1>Hi my name is seonghyun..</h1>
-      <p>Ivemade something just for you</p>
+      <p>and..ive made something just for you</p>
       <button onclick="nextSlide()">Next</button>
     </div>
 
@@ -85,7 +85,7 @@
     <!-- Slide 3: With image -->
     <div class="slide" id="slide3">
       <h2>Just imagine us together 💞</h2>
-      <img src="yourimage.jpg" alt="Our picture" />
+      <img src=https://imgur.com/4CuwZ1a />
       <button onclick="nextSlide()">Next</button>
     </div>
 
