--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Slide 5: Proposal -->
     <div class="slide" id="slide5">
       <h2>Will you be my boyfriend? 💍</h2>
-      <img src="https://i.imgur.com/4CuwZ1a.jpg" alt="Me smiling for you" />
+      <img src="https://i.imgur.com/zdrCvpi.jpg" alt="Me smiling for you" />
       <br />
       <button onclick="alert('YAY! I love you ❤️')">YES!</button>
     </div>
