--- a/index.html
+++ b/index.html
@@ -70,34 +70,38 @@
 
     <!-- Slide 1 -->
     <div class="slide active" id="slide1">
-      <h1>Hi, I'm Seonghyun 💖</h1>
-      <p>I made something just for you</p>
+      <h1>Hii im seonghyun and i...</h1>
+      <p> made something just for you😏😏😏</p>
       <button onclick="nextSlide()">Next</button>
     </div>
 
     <!-- Slide 2: Input name -->
     <div class="slide" id="slide2">
-      <h2>What's your name? 😘</h2>
-      <input type="text" id="hisName" placeholder="Enter your name" />
+      <h2>Whats your name?</h2>
+      <input type="text" id="hisName" placeholder="Enter your name bb" />
       <br />
       <button onclick="showName()">Submit</button>
     </div>
 
     <!-- Slide 3: With image -->
     <div class="slide" id="slide3">
-      <h2>Just imagine us together 💞</h2>
+      <h2> readt next??😏😏😏 </h2>
       <img src="https://i.imgur.com/4CuwZ1a.jpg" alt="Our picture" />
       <button onclick="nextSlide()">Next</button>
     </div>
 
     <!-- Slide 4: Sweet paragraph -->
     <div class="slide" id="slide4">
-      <h2>A little something from me...</h2>
+      <h2>little things about me...</h2>
       <p>
-        I may be a little weird and chaotic sometimes,<br />
-        but you bring calm to my storm.<br />
-        I love discovering new things — and right now,<br />
-        I think the best thing I’ve discovered is you. 🥹💖
+        Nothing much about me like im just a normal nerdy guy but yeah HAHAHA i promise i will always be here for you and always ready to lend you my shoulder anytime you need it whether it’s on your good days or your bad days..
+
+I know im not the best with words maybe cause of my dyslexia sometimes but yea i swear im verbally a sweet person yk 😏 HAHAHA
+
+And oh — one more thing: I love discovering new things.
+Right now? I think the best thing I’ve ever discovered… is you.<br />
+         Totally worth it for me to confess 2 months ago 🌚<br />
+        
       </p>
       <button onclick="nextSlide()">Next</button>
     </div>
@@ -107,7 +111,7 @@
       <h2>Will you be my boyfriend? 💍</h2>
       <img src="https://i.imgur.com/qGUTEzc.jpg" alt="Me smiling for you" />
       <br />
-      <button onclick="alert('YAY! I love you ❤️')">YES!</button>
+      <button onclick="alert(stay tune on june 😏)">YES!</button>
     </div>
 
   </div>
