--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 I know im not the best with words maybe cause of my dyslexia sometimes but yea i swear im verbally a sweet person yk 😏 HAHAHA
 
-And oh — one more thing: I love discovering new things.
-Right now? I think the best thing I’ve ever discovered… is you.<br />
+Aand yea one more thing i love discovering new things..
+Right now i think the best thing ive ever discovered… is you.<br />
          Totally worth it for me to confess 2 months ago 🌚<br />
         
       </p>
@@ -111,7 +111,7 @@ Right now? I think the best thing I’ve ever discovered… is you.<br />
       <h2>Will you be my boyfriend? 💍</h2>
       <img src="https://i.imgur.com/qGUTEzc.jpg" alt="Me smiling for you" />
       <br />
-      <button onclick="alert(stay tune on june 😏)">YES!</button>
+      <button onclick="alert('stay tune on june 😏')">YES!</button>
     </div>
 
   </div>
