--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         Nothing much about me like im just a normal nerdy guy but yeah HAHAHA i promise i will always be here for you and always ready to lend you my shoulder anytime you need it whether it’s on your good days or your bad days..
 
 I know im not the best with words maybe cause of my dyslexia sometimes but yea i swear im verbally a sweet person yk 😏 HAHAHA
-
-Aand yea one more thing i love discovering new things..
+and yea one more thing i love discovering new things..
 Right now i think the best thing ive ever discovered… is you.<br />
          Totally worth it for me to confess 2 months ago 🌚<br />
         
