--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Right now i think the best thing ive ever discovered… is you.<br />
         alert(`Ouuu seems like this name will be mine 😏`);
         nextSlide();
       } else {
-        alert("Please enter your name 😅");
+        alert("Please enter your name bb😅");
       }
     }
   </script>
